refactor(tms): 优化头程单相关代码
- 改进 TmsFirstMileConvert 中的转换逻辑，使用 stream 方式获取第一个明细项
- 在 TmsFirstMileItemMapper 中添加对头程单 ID 的查询条件
- 在 TmsFirstMileItemPageReqVO 和 TmsFirstMilePageReqVO 中添加 ID 字段
- 简化 TmsFirstMileServiceImpl 中的转换代码